<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/book_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_text"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/book_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author_text"/>

    <TextView
        android:id="@+id/book_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genre_text"/>

    <TextView
        android:id="@+id/book_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/publication_year"/>

    <TextView
        android:id="@+id/book_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status_text"/>


</LinearLayout>